--- a/Python/training-yourcode.ipynb
+++ b/Python/training-yourcode.ipynb
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from skopt.space import Real, Integer\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -131,114 +131,89 @@
        "      <th>X1</th>\n",
        "      <th>X2</th>\n",
        "      <th>X3</th>\n",
-       "      <th>X4</th>\n",
-       "      <th>X5</th>\n",
-       "      <th>X6</th>\n",
-       "      <th>X7</th>\n",
-       "      <th>X8</th>\n",
        "      <th>Y1</th>\n",
        "      <th>Y2</th>\n",
        "      <th>Y3</th>\n",
+       "      <th>Y4</th>\n",
+       "      <th>Y5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.10294</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.011552</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>10.9426</td>\n",
-       "      <td>0.001962</td>\n",
-       "      <td>3.14482</td>\n",
-       "      <td>21.3215</td>\n",
-       "      <td>4.03030</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>6.982</td>\n",
+       "      <td>2.095</td>\n",
+       "      <td>32.28</td>\n",
+       "      <td>20.13</td>\n",
+       "      <td>56.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.00100</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>11.7288</td>\n",
-       "      <td>0.002848</td>\n",
-       "      <td>3.28428</td>\n",
-       "      <td>13.8008</td>\n",
-       "      <td>1.94162</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>6.014</td>\n",
+       "      <td>2.143</td>\n",
+       "      <td>31.34</td>\n",
+       "      <td>18.67</td>\n",
+       "      <td>58.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.00100</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>12.4240</td>\n",
-       "      <td>0.005762</td>\n",
-       "      <td>3.28808</td>\n",
-       "      <td>12.0263</td>\n",
-       "      <td>1.30092</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>5.529</td>\n",
+       "      <td>2.154</td>\n",
+       "      <td>34.21</td>\n",
+       "      <td>15.77</td>\n",
+       "      <td>59.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.00100</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>10.2735</td>\n",
-       "      <td>0.001374</td>\n",
-       "      <td>3.28866</td>\n",
-       "      <td>11.1520</td>\n",
-       "      <td>1.39649</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>4.808</td>\n",
+       "      <td>2.168</td>\n",
+       "      <td>36.18</td>\n",
+       "      <td>12.63</td>\n",
+       "      <td>62.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.00100</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>15.0000</td>\n",
-       "      <td>0.006223</td>\n",
-       "      <td>3.28805</td>\n",
-       "      <td>10.0798</td>\n",
-       "      <td>1.14284</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.066</td>\n",
+       "      <td>2.096</td>\n",
+       "      <td>34.10</td>\n",
+       "      <td>20.02</td>\n",
+       "      <td>56.39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        X1    X2        X3   X4     X5   X6       X7        X8       Y1  \\\n",
-       "0  0.10294  1.00  0.011552  6.2  0.005  3.5  10.9426  0.001962  3.14482   \n",
-       "1  0.00100  0.94  0.000100  6.2  0.005  3.5  11.7288  0.002848  3.28428   \n",
-       "2  0.00100  0.82  0.000100  6.2  0.005  3.5  12.4240  0.005762  3.28808   \n",
-       "3  0.00100  0.70  0.000100  6.2  0.005  3.5  10.2735  0.001374  3.28866   \n",
-       "4  0.00100  0.82  0.000100  6.2  0.005  3.5  15.0000  0.006223  3.28805   \n",
-       "\n",
-       "        Y2       Y3  \n",
-       "0  21.3215  4.03030  \n",
-       "1  13.8008  1.94162  \n",
-       "2  12.0263  1.30092  \n",
-       "3  11.1520  1.39649  \n",
-       "4  10.0798  1.14284  "
+       "     X1    X2    X3     Y1     Y2     Y3     Y4     Y5\n",
+       "0   1.0  93.0  40.0  6.982  2.095  32.28  20.13  56.50\n",
+       "1   1.0  94.0  40.0  6.014  2.143  31.34  18.67  58.80\n",
+       "2   1.0  95.0  40.0  5.529  2.154  34.21  15.77  59.80\n",
+       "3   1.0  96.0  40.0  4.808  2.168  36.18  12.63  62.20\n",
+       "4  11.0  93.0  40.0  7.066  2.096  34.10  20.02  56.39"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = pd.read_csv(\"../resources/forcefields-dataset.csv\", sep=\",\")\n",
+    "X = pd.read_csv(\"../resources/forcefields-dataset.csv\", sep=\";\")\n",
     "X.head()"
    ]
   },
@@ -294,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +602,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example n°4: train the regression model based on features importance\n",
+    "## Example n°4: train the regression model by using low amount of training/testing data\n",
+    "You are invited to split your dataset into a 3 parts: training/testing/validation. The idea is to check the validation metrics for the testing/training, to them validate the final trained model based on the validation dataset which was not taken into account within the hypeparameters tuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your code\n",
+    "\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example n°5: train the regression model based on features importance\n",
     "\n",
     "This example will make a comparison between the selection based on your previous factorial analysis, and the features selection based on features importance. The latter is a tool to check the importance of a input variable on the building of trees withn the GBR model. <br>\n",
     "The functions are provided below, and the comparisons will be done after exchanges between students."
