--- a/Python/training-yourcode.ipynb
+++ b/Python/training-yourcode.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from skopt.space import Real, Integer\n",
